--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "discord.js": "^14.9.0",
     "prettier": "^2.8.8"
   },
